charts/all/llm-serving-service/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ibm-granite-instruct-rag-llm
  namespace: istio-system
  annotations:
    openshift.io/display-name: ibm-granite-instruct
    serving.knative.openshift.io/enablePassthrough: 'true'
    sidecar.istio.io/inject: 'true'
    sidecar.istio.io/rewriteAppHTTPProbers: 'true'
  labels:
    opendatahub.io/dashboard: 'true'
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  wildcardPolicy: None
